# polars_backtest_extension

./: .gitignore  Cargo.toml  FINLAB_PARAMS_COMPARISON.md  IMPLEMENTATION_PLAN.md  LICENSE  LIQUIDITY_METRICS_PLAN.md  README.md  REFACTOR_PLAN.md  REPORT_IMPLEMENTATION_PLAN.md  RESEARCH.md  backtest_flow.md  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_backtest.py
btcore/: Cargo.toml
btcore/src/: lib.rs  portfolio.rs  position.rs  rebalance.rs  simulation.rs  stops.rs  tracker.rs  weights.rs
btcore/src/simulation/: long.rs  long_arrow.rs  mod.rs  wide.rs
btcore/tests/: integration_test.rs
polars_backtest/: Cargo.toml  README.md  pyproject.toml
polars_backtest/benchmarks/: bench_backtest.py
polars_backtest/python/polars_backtest/: __init__.py  _polars_ext.pyi  namespace.py  namespace.pyi  polars_backtest.pyi  utils.py  wide.py
polars_backtest/src/: ffi_convert.rs  lib.rs  report.rs
polars_backtest/tests/: test_backtest.py  test_long_vs_wide.py  test_namespace.py  test_pending_trades.py  test_wide_vs_finlab.py
skills/polars-backtest/: SKILL.md
specs/: 01_FINLAB_BACKTEST_SPEC.md  02_POLARS_RUST_EXTENSION_SPEC.md  03_DATA_LOADING_AND_TESTING.md  FINLAB_CALCULATION_ANALYSIS.md  README.md  REPORT_IMPLEMENTATION_PLAN.md
tests/: test_long_format.py  test_namespace.py  test_vs_finlab.py
tests/python/: test_resample.py  test_resample_polars.py  test_trades_tracking.py
